--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -6,13 +6,17 @@ body {
 .square {
     display: inline-block;
     width: 6.65%;
-    height: 40px;
+    height: 60px;
     border: thin solid black;
     vertical-align: top;
     text-align: center;
     color: white;
     font-size: 1.2em;
     font-weight: 800;
+    img {
+        width: 100%;
+        height: 60px;
+    } 
 }
 
 .triple-word {
@@ -34,3 +38,4 @@ body {
 .empty {
     background-color: white;
 }
+
